# bookstore-ses

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
sql/: all_tables.py  seed_data.py
src/: database.py  main.py
src/sql/: all_tables.py  seed_data.py
static/: auth.css  author_detail.css  book_detail.css  books.css  cart.css  checkout.css  styles.css
templates/: author_detail.html  book_detail.html  books.html  cart.html  checkout.html  login.html  order_success.html  register.html
templates/include/: navbar.html
