[project]
name = "bookstore"
version = "0.1.0"
description = ""
authors = [
    {name = "Grigory Malanchuk",email = "grigorymalanchuk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg (>=0.31.0,<0.32.0)",
    "fastapi[all] (>=0.124.0,<0.125.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
